MaxiNet

MaxiNet 1.2:
 * change: Disabled non-functional methods and attributes of NodeWrapper
 * bugfix: Fixed hostname to workerid mapping
 * bugfix: Fixed simplePing.py experiment
 * bugfix: Never set highest bit in MAC address (resolves #26)
 * bugfix: Fixed corner case during source IP extraction
 * bugfix: Fix port selection for tunneling (Thanks to  Marco Vanotti <mvanotti@dc.uba.ar>)
 * bugfix: Removed corner case during FatTree MAC generation (Thanks to  Marco Vanotti <mvanotti@dc.uba.ar>)
 * feature: Added CLI support for Docker hosts
 * feature: Added logging of caught exceptions during mininet creation
 * feature: Added support for "params1" and "params2" arguments for links
 * feature: Showcase example for NodeWrapper methods and attributes

MaxiNet 1.1:
 * feature: Support for Docker container hosts via containernet
 * feature: Pyro 4.55 compatibility

MaxiNet 1.0:
 * change: Reworked MaxiNet startup architecture.
           To start MaxiNet cluster call MaxiNetFrontendServer command
           on the frontend and MaxiNetWorker on worker machines.
 * change: Config options changes. See share/MaxiNet-cfg-sample
 * change: moved MaxiNet/Frontend/tools.py to to MaxiNet/tools.py
 * bugfix: cpu logging did not terminate correctly
 * feature: Pyro 4.30 compatibility
 * feature: mininet 2.2.1rc1 compatibility
 * feature: Debian 8 compatibility
 * feature: Ubuntu 14.04 compatibility

MaxiNet 0.4:
 * cleanup: MaxiNet is now installed as a python module. Use "from MaxiNet.Frontend import maxinet" instead of old
            "import maxinet"
 * cleanup: configuration is now done in a config file instead of config.py. See MaxiNet-cfg-sample
 * cleanup: Tools class moved from maxinet.py to tools.py
 * cleanup: FatTree class moved from examples.fatTree to tools.py

MaxiNet 0.3.1:
 * bugfix: tc parameters were ignored on Tunnels if interface wasn't explicitly
           set to TCIntf
 * bugfix: first start of MaxiNet sometimes failed because tun module was not