@@ -4,3 +4,7 @@ MaxiNet - Distributed Software Defined Network Emulation
 Welcome to the MaxiNet repository.
 
 For additional information please have a look at the [wiki](https://github.com/MaxiNet/MaxiNet/wiki).
+
+Added:
+MaxiNet-3 1.0 for Python 3.8.
+Tested in Ubuntu 20.04 server.
